--- a/gcc/extend.texi
+++ b/gcc/extend.texi
@@ -3308,7 +3308,7 @@ Predefined Macros,cpp.info,The C Preprocessor}).
 * Naming Results::      Giving a name to C++ function return values.
 * Min and Max::		C++ Minimum and maximum operators.
 * Volatiles::		What constitutes an access to a volatile object.
-* Restricted Pointers:: C9X restricted pointers and references.
+* Restricted Pointers:: C99 restricted pointers and references.
 * C++ Interface::       You can use a single C++ header file for both
                          declarations and definitions.
 * Template Instantiation:: Methods for ensuring that exactly one copy of
@@ -3562,9 +3562,9 @@ an rvalue.
 @cindex restricted references
 @cindex restricted this pointer
 
-As with gcc, g++ understands the C9X proposal of restricted pointers,
+As with gcc, g++ understands the C99 feature of restricted pointers,
 specified with the @code{__restrict__}, or @code{__restrict} type
-qualifier. Because you cannot compile C++ by specifying the -flang-isoc9x
+qualifier. Because you cannot compile C++ by specifying the -std=c99
 language flag, @code{restrict} is not a keyword in C++.
 
 In addition to allowing restricted pointers, you can specify restricted
