--- a/gcc/invoke.texi
+++ b/gcc/invoke.texi
@@ -96,7 +96,7 @@ in the following sections.
 @item C Language Options
 @xref{C Dialect Options,,Options Controlling C Dialect}.
 @smallexample
--ansi -fstd  -fallow-single-precision  -fcond-mismatch  -fno-asm
+-ansi -std  -fallow-single-precision  -fcond-mismatch  -fno-asm
 -fno-builtin  -ffreestanding  -fhosted  -fsigned-bitfields  -fsigned-char
 -funsigned-bitfields  -funsigned-char  -fwritable-strings
 -traditional  -traditional-cpp  -trigraphs -fsingle-precision-constant
@@ -717,7 +717,7 @@ programs that might use these names for other things.
 The functions @code{alloca}, @code{abort}, @code{exit}, and
 @code{_exit} are not builtin functions when @samp{-ansi} is used.
 
-@item -fstd=
+@item -std=
 Determine the language standard.  A value for this option must be provided;
 possible values are 
 
@@ -728,26 +728,37 @@ Same as -ansi
 @item iso9899:199409
 ISO C as modified in amend. 1
 
-@item iso9899:199x
-ISO C 9x
+@item iso9899:1999
+ISO C99.  Note that this standard is not yet fully supported; see
+@url{http://gcc.gnu.org/c99status.html} for more information.
 
 @item c89
 same as -std=iso9899:1990
 
-@item c9x
-same as -std=iso9899:199x
+@item c99
+same as -std=iso9899:1999
 
 @item gnu89
 default, iso9899:1990 + gnu extensions
 
+@item gnu99
+iso9899:1999 + gnu extensions
+
+@item iso9899:199x
+same as -std=iso9899:1999, deprecated
+
+@item c9x
+same as -std=iso9899:1999, deprecated
+
 @item gnu9x
-iso9899:199x + gnu extensions
+same as -std=gnu99, deprecated
+
 @end itemize
 
 Even when this option is not specified, you can still use some of the
 features of newer standards in so far as they do not conflict with
 previous C standards.  For example, you may use @code{__restrict__} even
-when -fstd=c9x is not specified.
+when -std=c99 is not specified.
 
 @item -fno-asm
 Do not recognize @code{asm}, @code{inline} or @code{typeof} as a
