* pa.c (emit_hpdiv_const): Update to match new pattern for udivsi3.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35089 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-17  Mark Klein <mklein@dis.com>
+
+         * pa.c (emit_hpdiv_const): Update to match new pattern for udivsi3.
+
 2000-07-17  J. David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* Makefile.in (TARGET_GETGROUPS_T): New configuration variable.
