* gcc.c-torture/execute/20000717-3.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35090 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 Mon Jul 17 03:13:12 2000  Jeffrey A Law  (law@cygnus.com)
 
+	* gcc.c-torture/execute/20000717-3.c: New test.
+
 	* gcc.c-torture/compile/20000717-1.c: New test.
 
 2000-07-17  Geoffrey Keating  <geoffk@cygnus.com>
