--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -38,6 +38,9 @@ Mon Jul 17 02:37:06 2000  Marc Espie <espie@openbsd.org>
 
 2000-07-17  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* invoke.texi (-pedantic): Refer to ISO C instead of ANSI C, and
+	update to describe current practice.
+
 	* glimits.h (LLONG_MIN, LLONG_MAX, ULLONG_MAX): Define for C99.
 
 	* contrib.texi, cpp.texi, extend.texi, invoke.texi: Update
