--- a/gcc/invoke.texi
+++ b/gcc/invoke.texi
@@ -1447,10 +1447,12 @@ These options control the amount and kinds of warnings produced by GCC:
 Check the code for syntax errors, but don't do anything beyond that.
 
 @item -pedantic
-Issue all the warnings demanded by strict ANSI C and ISO C++;
-reject all programs that use forbidden extensions.
+Issue all the warnings demanded by strict ISO C and ISO C++;
+reject all programs that use forbidden extensions, and some other
+programs that do not follow ISO C and ISO C++.  For ISO C, follows the
+version of the ISO C standard specified by any @samp{-std} option used.
 
-Valid ANSI C and ISO C++ programs should compile properly with or without
+Valid ISO C and ISO C++ programs should compile properly with or without
 this option (though a rare few will require @samp{-ansi}).  However,
 without this option, certain GNU extensions and traditional C and C++
 features are supported as well.  With this option, they are rejected.
@@ -1462,16 +1464,13 @@ warnings are also disabled in the expression that follows
 these escape routes; application programs should avoid them.
 @xref{Alternate Keywords}.
 
-This option is not intended to be @i{useful}; it exists only to satisfy
-pedants who would otherwise claim that GCC fails to support the ANSI
-standard.
-
-Some users try to use @samp{-pedantic} to check programs for strict ANSI
+Some users try to use @samp{-pedantic} to check programs for strict ISO
 C conformance.  They soon find that it does not do quite what they want:
 it finds some non-ANSI practices, but not all---only those for which
-ANSI C @emph{requires} a diagnostic.
+ISO C @emph{requires} a diagnostic, and some others for which
+diagnostics have been added.
 
-A feature to report any failure to conform to ANSI C might be useful in
+A feature to report any failure to conform to ISO C might be useful in
 some instances, but would require considerable additional work and would
 be quite different from @samp{-pedantic}.  We don't have plans to
 support such a feature in the near future.
