* gcc.dg/cpp/cmdlne-dD.c: New test. 	* gcc.dg/cpp/cmdlne-dM.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35095 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-17  Neil Booth  <neilb@earthling.net>
+
+	* gcc.dg/cpp/cmdlne-dM.c: New test.
+	* gcc.dg/cpp/cmdlne-dD.c: New test.
+
 Mon Jul 17 03:13:12 2000  Jeffrey A Law  (law@cygnus.com)
 
 	* gcc.c-torture/execute/20000717-3.c: New test.
