* simplify-rtx.c (simplify_binary_operation): Recognize 	   (compare (gt[u] (cc) 0) (lt[u] (cc) 0)). 	(simplify_ternary_operation):  Do not examine MODE_BITSIZE of 	   a CONST_INT, it will always be zero.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35098 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2000-07-17  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* simplify-rtx.c (simplify_binary_operation): Recognize
+	   (compare (gt[u] (cc) 0) (lt[u] (cc) 0)).
+	(simplify_ternary_operation):  Do not examine MODE_BITSIZE of
+	   a CONST_INT, it will always be zero.
+
 2000-07-17  Chandrakala Chavva   <cchavva@cygnus.com>
 
 	* loop.c (check_dbra_loop) : Return if more than one condition is 
