--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-17  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* gcc.dg/cpp/syshdr.c: New test.
+	* gcc.dg/cpp/syshdr1.h, gcc.dg/cpp/syshdr2.h: New files.
+
 2000-07-17  Neil Booth  <neilb@earthling.net>
 
 	* gcc.dg/cpp/cmdlne-dM.c: New test.
