--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-07-17  Jason Merrill  <jason@redhat.com>
+
+	* Makefile.in (clean): Remove libgcc directory.
+
+	* configure.in (-Wno-long-long check): Use higher-level macros.
+
 2000-07-17  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* simplify-rtx.c (simplify_binary_operation): Recognize
@@ -12,9 +18,9 @@
 
 Mon Jul 17 08:26:35 2000  Clinton Popetz  <cpopetz@cygnus.com>
 
-	* mips.c (mips_expand_prologue): Don't calculate the last               
-	argument register unless we need it.  When we are calculating 
-	this, make sure FUNCTION_ARG is giving us a REG.                        
+	* mips.c (mips_expand_prologue): Don't calculate the last argument
+	register unless we need it.  When we are calculating this, make
+	sure FUNCTION_ARG is giving us a REG.
 
 2000-07-17  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
 
@@ -23,7 +29,6 @@ Mon Jul 17 08:26:35 2000  Clinton Popetz  <cpopetz@cygnus.com>
 	(propagate_one_insn): Don't pass the PATTERN of the insn.
 
 2000-07-17  Mark Klein <mklein@dis.com>
-
 
          * pa.c (emit_hpdiv_const): Update to match new pattern for udivsi3.
 
