--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-17  Chandrakala Chavva   <cchavva@cygnus.com>
+
+	* loop.c (check_dbra_loop) : Changed loop_continue to loop->cont.
+
 2000-07-17  Jason Merrill  <jason@redhat.com>
 
 	* Makefile.in (clean): Remove libgcc directory.
