--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,18 @@
+2000-07-17  Jason Merrill  <jason@redhat.com>
+
+	* typeck.c (mark_addressable): Never set TREE_USED.
+	* call.c (build_call): Don't abort on calls to library functions
+	that have been declared normally.
+
+	* typeck.c (build_binary_op): Fix grammar in warning.
+
+	* exception.cc (__eh_free): Fix prototype.
+
+	* decl2.c (finish_decl_parsing): Handle TEMPLATE_ID_EXPR.
+
+	* decl.c (pushdecl): Handle seeing an OVERLOAD in 
+	IDENTIFIER_NAMESPACE_VALUE.
+
 2000-07-14  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* .cvsignore: parse.h and parse.c have no cp- prefix.
