* extend.texi (Extended Asm): Mention that a memory clobber does not count as a side-effect.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35111 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2000-07-17  Geoffrey Keating  <geoffk@cygnus.com>
 
+	* configure: Regenerate.
+	
 	* extend.texi (Extended Asm): Mention that a memory clobber
 	does not count as a side-effect.
 
