* c-decl.c (duplicate_decls): Do not call make_var_volatile() in case of invalid volatile re-declaration.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35119 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-18  Alexandre Oliva  <aoliva@redhat.com>
+
+	* c-decl.c (duplicate_decls): Do not call make_var_volatile() in
+	case of invalid volatile re-declaration.
+
 2000-07-18  Jakub Jelinek  <jakub@redhat.com>
 
 	* calls.c (store_arg): Return non-zero if sibcall_failure is
