* gcc.dg/noncompile/redecl-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35122 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-18  Alexandre Oliva  <aoliva@redhat.com>
+
+	* gcc.dg/noncompile/redecl-1.c: New test.
+
 2000-07-18  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/20000717-5.c: New test.
