--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-18  Jakub Jelinek  <jakub@redhat.com>
+
+	* cpplex.c (cpp_scan_buffer): Output line command even at the stop
+	buffer, provided it is not NULL.
+
 2000-07-18  Alexandre Oliva  <aoliva@redhat.com>
 
 	* c-decl.c (duplicate_decls): Do not call make_var_volatile() in
@@ -5,8 +10,7 @@
 
 2000-07-18  Jakub Jelinek  <jakub@redhat.com>
 
-	* calls.c (store_arg): Return non-zero if sibcall_failure is
-	desired.
+	* calls.c (store_arg): Return non-zero if sibcall_failure is desired.
 	(expand_call): Adjust caller.
 
 2000-07-17  Gabriel Dos Reis  <gdr@codesourcery.com>
