2000-07-19  Jeff Sturm  <jeff.sturm@appnet.com>
	* java/lang/natThrowable.cc (fillInStackTrace): Check for
	zero return from backtrace().


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35135 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-19  Jeff Sturm  <jeff.sturm@appnet.com>
+
+	* java/lang/natThrowable.cc (fillInStackTrace): Check for
+	zero return from backtrace().
+
 2000-07-15  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* java/awt/EventQueue.java (invokeAndWait): Call postEvent() within
